@@ -1,4 +1,5 @@
 3.0.15
+ * Fix counter application order in short read protection (CASSANDRA-12872)
  * Don't block RepairJob execution on validation futures (CASSANDRA-13797)
  * Wait for all management tasks to complete before shutting down CLSM (CASSANDRA-13123)
  * INSERT statement fails when Tuple type is used as clustering column with default DESC order (CASSANDRA-13717)
